learn how to build with atomic design

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-ios": "3.2.3",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.4",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
