--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -250,6 +250,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.fresco:animated-gif:2.5.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
